--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -32,27 +32,29 @@
       </div>
     </div>
 
-    <p>اذا لديك اى سؤال يرجي الاتصال </p>
+    <p>مواقع مهمة للكتب والمراجع العلمية </p>
 
     <ul>
-      <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">الصفحة الرئيسية</a></li>
+      <li><a href="https://archive.org/" target="_blank" rel="noopener noreferrer">موقع الارشيف</a></li>
       <li>
-        <a href="https://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">JHipster on Stack Overflow</a>
+        <a href="https://b-ok.africa/" target="_blank" rel="noopener noreferrer">موقع كتب واوراق علمية</a>
       </li>
       <li>
-        <a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer"
-          >JHipster bug tracker</a
+        <a href="https://www.pdfdrive.com/" target="_blank" rel="noopener noreferrer">كتب ومجلات وجرائد</a
         >
       </li>
       <li>
-        <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">JHipster public chat room</a>
+        <a href="http://libgen.rs/" target="_blank" rel="noopener noreferrer">كتب ومجلات علمية</a>
       </li>
-      <li><a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer">follow @jhipster on Twitter</a></li>
+      <li><a href="https://www.noor-book.com/" target="_blank" rel="noopener noreferrer">موقع نور للكتب</a></li>
+
+      <li><a href="https://foulabook.com/" target="_blank" rel="noopener noreferrer">موقع فلة للكتب </a></li>
+      <li><a href="https://www.4read.net/" target="_blank" rel="noopener noreferrer">موقع فو ريد للكتب </a></li>
+      <li><a href="https://www.kutub.info/" target="_blank" rel="noopener noreferrer">موقع كتاب للكتب </a></li>
     </ul>
 
-    <p>
+    <p style="text-align: center">
       <span>نحن نرحب بك للعودة مرة اخرى للموقع للاستفادة منه.</span>
-      <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
     </p>
   </div>
 </div>
