--- a/src/main/webapp/app/entities/author/about/author-about.component.html
+++ b/src/main/webapp/app/entities/author/about/author-about.component.html
@@ -1,4 +1,4 @@
 <div class="row justify-content-center">
-  <h1>أهلا وسهلا بيكم فى الموقع الرسمي للكتب</h1>
-  <h1> اهلا وسهلا بيك فى موقع الكتب العربي </h1>
-</div>
+  <h1>أهلا وسهلا بكم فى الموقع الرسمي للكتب</h1>
+</div >
+<div>اهلا وسهلا باصحاب القراءة العربية</div>
