--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -4,13 +4,11 @@
   </div>
 
   <div class="col-md-9" style="text-align: center">
-    <h1 class="display-4"><span>اهلا وسهلا بكم فى موقع  </span> كتاب</h1>
+    <h1 class="display-4"><span>اهلا وسهلا بكم فى موقع </span> كتاب</h1>
   </div>
 
   <div class="col-md-9" style="text-align: right">
-
-
-    <p class="lead">الصفحة الرئيسية</p>
+    <p class="lead">الصفحJJJJة الرئيسية</p>
 
     <div [ngSwitch]="account !== null">
       <div class="alert alert-success" *ngSwitchCase="true">
@@ -32,7 +30,7 @@
       </div>
     </div>
 
-    <p>مواقع مهمة للكتب والمراجع العلمية </p>
+    <p>مواقع مهمة للكتب والمراجع العلمية</p>
 
     <ul>
       <li><a href="https://archive.org/" target="_blank" rel="noopener noreferrer">موقع الارشيف</a></li>
@@ -40,8 +38,7 @@
         <a href="https://b-ok.africa/" target="_blank" rel="noopener noreferrer">موقع كتب واوراق علمية</a>
       </li>
       <li>
-        <a href="https://www.pdfdrive.com/" target="_blank" rel="noopener noreferrer">كتب ومجلات وجرائد</a
-        >
+        <a href="https://www.pdfdrive.com/" target="_blank" rel="noopener noreferrer">كتب ومجلات وجرائد</a>
       </li>
       <li>
         <a href="http://libgen.rs/" target="_blank" rel="noopener noreferrer">كتب ومجلات علمية</a>
