--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="alert alert-warning" *ngSwitchCase="false">
-        <span>اذا كانت تريد </span>
+        <span>اذا كانت ت </span>
         <a class="alert-link" (click)="login()">الدخول</a
         ><span
           >, you can try the default accounts:<br />- Administrator (login="admin" and password="admin") <br />- User (login="user" and
